[project]
name = "hf-hub-offline"
version = "0.1.0"
description = "Reproduce HF_HUB_OFFLINE not avoiding network calls if cache is not warmed in-process"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub==1.1.5",
    "pillow>=12.0.0",
    "pytest-socket==0.7.0",
    "torch==2.9.1+cpu",
    "torchvision==0.24.1+cpu",
    "transformers @ git+https://github.com/huggingface/transformers.git@main",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
